k3s/smarthome/zigbee2mqtt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zigbee2mqtt
  name: zigbee2mqtt
  namespace: smarthome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zigbee2mqtt
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      containers:
        - name: zigbee2mqtt
          image: koenkk/zigbee2mqtt
          securityContext:
            privileged: true
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /dev/ttyACM0
              name: sonoff
            - mountPath: /app/data
              subPath: zigbee2mqtt
              name: config
      restartPolicy: Always
      volumes:
        - name: sonoff
          hostPath:
            path: /dev/serial/by-id/usb-ITead_Sonoff_Zigbee_3.0_USB_Dongle_Plus_5cf7ffd9ae12ec11bcfa23c7bd930c07-if00-port0
        - name: config
          persistentVolumeClaim:
            claimName: local-smarthome-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zigbee2mqtt
  name: zigbee2mqtt
  namespace: smarthome
spec:
  ports:
    - name: "8080"
      port: 8083
      targetPort: 8080
  type: LoadBalancer
  selector:
    app: zigbee2mqtt
